--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,12 @@
   margin: 0;
 }
 
-.header {
+.header-float {
   display: flex;
   justify-content: flex-start;
   gap: 50rem;
   padding: 1vh;
+  pointer-events: none;
 }
 
 .nav-bar {
@@ -43,25 +44,20 @@ h3 {
   margin-right: none;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+  .header-float {
+    animation: header-float-float infinite 4s ease-in-out;
   }
 }
 
-@keyframes App-logo-float {
+@keyframes header-float-float {
   0% {
     transform: translateY(0);
   }
   50% {
-    transform: translateY(10px);
+    transform: translateY(12px);
   }
   100% {
     transform: translateY(0px);
   }
-} */
+}
