--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,19 @@ h3 {
 .acc-header {
   font-weight: bold;
 }
+
+/* links */
+
+span > a:link {
+  text-decoration: none;
+  color: #fff;
+  font-style: italic;
+}
+
+span > a:visited {
+  color: #000;
+}
+
+span > a:hover {
+  color: #dbe4ff;
+}
