--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -2,6 +2,7 @@
   text-align: center;
 }
 
+/* Global reset */
 #root {
   padding: 0;
   margin: 0;
@@ -83,4 +84,8 @@ h3 {
   opacity: 0.8;
   /* border-top: black solid 1px;
   border-left: black solid 1px; */
+}
+
+.toast-content {
+  color: white;
 }
