--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -8,12 +8,13 @@
   margin: 0;
 }
 
-.header-float {
+.header-app-name {
   display: flex;
   justify-content: flex-start;
   gap: 50rem;
   padding: 1vh;
   pointer-events: none;
+  margin-bottom: 0;
 }
 
 .nav-bar {
@@ -30,8 +31,7 @@
 }
 
 h3 {
-  margin: 3rem;
-  padding: 1vh;
+  margin-left: 3rem;
   background-color: #dbe4ff;
   color: #4263eb;
 }
@@ -39,24 +39,6 @@ h3 {
 .QA {
   margin-left: 5vh;
   margin-right: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .header-float {
-    animation: header-float-float infinite 4s ease-in-out;
-  }
-}
-
-@keyframes header-float-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(12px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
 }
 
 .acc-header {
