--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -45,6 +45,11 @@ h3 {
   font-weight: bold;
 }
 
+.accordion-header .accordion-button {
+  background-color: #4263eb;
+  color: #fff;
+}
+
 /* links */
 
 .link-button > a:link {
@@ -65,8 +70,4 @@ h3 {
   background-color: #e5e9fd;
 
   opacity: 0.8;
-}
-
-.toast-content {
-  color: white;
 }
