--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -36,6 +36,10 @@ h3 {
   color: #4263eb;
 }
 
+.main {
+  padding-left: 0;
+}
+
 .acc-header {
   font-weight: bold;
   /* display: flex;
@@ -79,4 +83,5 @@ h3 {
 .questions-overlay {
   background-color: #fff;
   opacity: 0.9;
+  padding-bottom: 10vh;
 }
