Beautifying and modifying the front page

--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -69,10 +69,16 @@
   color: #4263eb;
 }
 
-.app-info {
+.app-info-1 {
   background-color: #e5e9fd;
 
   opacity: 0.8;
+}
+
+.app-info-2 {
+  background-color: #d6dcfa;
+
+  opacity: 0.9;
 }
 
 .questions-overlay {
