Added rounded borders for Columns and divs on landing page improving the overall look

--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -71,12 +71,13 @@
 
 .app-info-1 {
   background-color: #e5e9fd;
-
+  border-radius: 170px;
   opacity: 0.8;
 }
 
 .app-info-2 {
   background-color: #d6dcfa;
+  border-radius: 10px;
 
   opacity: 0.9;
 }
