--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -69,7 +69,7 @@
   color: #4263eb;
 }
 
-.app-info-1 {
+.app-info {
   background-color: #e5e9fd;
   border-radius: 170px;
   opacity: 0.8;
@@ -77,7 +77,7 @@
 
 .app-info-2 {
   background-color: #d6dcfa;
-  border-radius: 40px;
+
   opacity: 0.9;
 }
 
