--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -82,8 +82,23 @@
   opacity: 0.9;
 }
 
+.overlay-active::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1); /* Adjust the opacity as needed */
+  z-index: 1000;
+  pointer-events: none;
+}
+
+/* temporary disabled this class */
 .questions-overlay {
-  background-color: #fff;
-  opacity: 0.9;
-  padding-bottom: 10vh;
+  /* background-color: rgba(255, 255, 255, 0.9); */
+  /* opacity: 0.9;
+  height: 10%;
+  padding-bottom: 10vh; */
+  /* Establish stacking context for content */
 }
