Fixed background image positioning on sm and xs viewports

--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+@media screen and (max-width: 768px) {
+  .App {
+    background-position: center;
+  }
+}
 /* Global reset */
 #root {
   padding: 0;
