--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -5,9 +5,14 @@
 
 @media screen and (max-width: 768px) {
   .App {
+    background-image: url("/public/backgroundMobile.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     background-position: center;
   }
 }
+
 /* Global reset */
 #root {
   padding: 0;
