--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -27,13 +27,10 @@
 }
 
 .imgRight {
-  background-image: url("/public/ImageOnTheRight.jpg");
-  min-height: 103vh;
-  min-width: 53vw;
-  background-repeat: no-repeat;
-  display: flex;
-  justify-content: end;
-  align-items: end;
+  background-image: url("/public/photo_2023-09-10_10-40-46.jpg");
+  height: 15vh;
+  width: 15vw;
+  background-color: #021740;
 }
 
 .header-app-name {
