Style updates to About page and answers by categories along with css classes tweaks

--- a/src/cssStyling/CardStyle.css
+++ b/src/cssStyling/CardStyle.css
@@ -23,11 +23,9 @@
 }
 
 .categorized-card {
-  background-color: #7188e7;
-  color: #fff;
+  color: #000;
 }
 
 .categorized-card-title {
-  background-color: #4263eb;
-  color: #fff;
+  color: #000;
 }
