--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -37,11 +37,19 @@
 }
 
 .header-app-name {
-  padding: 0.4rem;
+  padding: 0.5rem;
   padding-left: 0.7rem;
+  padding-right: 0.7rem;
+
   color: #021740;
   font-size: xx-large;
   background-color: #d6d4d0;
+}
+
+@media (max-width: 575px) {
+  .header-app-name {
+    border-radius: 3px;
+  }
 }
 
 .nav-bar {
@@ -49,44 +57,45 @@
   background-color: #021740;
 }
 
-/* .change {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-} */
-
-/* @media (max-width: 768px) {
-  .change {
-    display: flex;
-    background-color: #021740;
-    margin-right: 11rem;
-    justify-content: center;
-    align-items: center;
-  }
-} */
-
-.nav-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .flex {
   display: flex;
   align-items: center;
   justify-content: center;
-
   gap: 2rem;
 }
 
-.language-selector {
-  display: flex;
-  justify-content: end;
-  list-style: none;
+.main-dropdown {
+  margin: 0px 2rem;
 }
-.main {
-  padding-left: 0;
+
+.language-selector {
+  margin-left: 2rem;
+}
+
+button.navbar-button {
+  padding-left: 0.5rem;
+  padding-right: 0.3rem;
+  background-color: #d6d4d0;
+}
+
+@media (max-width: 500px) {
+  .language-selector {
+    margin-left: 3.4rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .main-dropdown {
+    margin-left: none;
+    margin-right: 1rem;
+  }
+}
+
+@media (max-width: 575px) {
+  button.btn.btn-secondary {
+    padding: 0.4rem;
+    margin-top: 0.5rem;
+  }
 }
 
 /* Accordion styling */
