--- a/src/cssStyling/App.css
+++ b/src/cssStyling/App.css
@@ -174,6 +174,31 @@ button.navbar-button.btn.btn-secondary:focus {
   background-color: #768fab;
 }
 
+button.submit {
+  background-color: #021740;
+  color: #fff;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin-top: 0.75rem;
+}
+
+button.submit:active {
+  background-color: #d6d4d0;
+  color: #021740;
+}
+
+button.submit:hover {
+  background-color: #768fab;
+  color: #021740;
+}
+
+button.submit:focus {
+  background-color: #d6d4d0;
+  font-size: large;
+  color: #021740;
+}
+/*  */
+
 .app-info-1 {
   color: #768fab;
   padding: 0;
@@ -324,9 +349,9 @@ a.dropdown-item.dropdown-color.active {
   font-size: x-large;
   margin-top: 0.7rem;
 }
-
-.individual-link {
-  background-color: #fff;
+.social-links a {
+  color: #021740;
+  opacity: 0.9;
   padding: 0.2rem;
 }
 
